Removed collapsibility of resume fieldsets. Fixes #2091.
As pointed out in the bug, there's more reasons to not do it than there are to do it.
(cherry picked from commit b65afd983b7b4c02301d7ddab27652aaf6f90bc0)

--- a/htdocs/theme/default/static/style/style.css
+++ b/htdocs/theme/default/static/style/style.css
@@ -1138,7 +1138,7 @@ fieldset.collapsed legend a {
 #coverletter fieldset,
 #interests fieldset,
 #contactinformation fieldset,
-#personalinformation fieldset,
+#personalinformation fieldset
 {
     border: 0;
 }
